# uv_cython_c_function_from_pyhton

./: .gitignore  MANIFEST.in  README.md  README_EN.md  pyproject.toml  setup.py
src/: main.py
src/c/: c_add.c  c_add.h  c_func_wrapper.c  c_func_wrapper.pxd  c_func_wrapper.pyx
src/cython_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
